Fixed code toolbar position on mobile devices.

--- a/css/touch/_toolbar.scss
+++ b/css/touch/_toolbar.scss
@@ -40,7 +40,7 @@
             position: absolute;
             left: 0;
             bottom: 0;
-            width: 787px;
+            width: 525px;
 
             > button {
                 outline: none;
